# langgraph-playground

./: .env.example  .gitignore  LICENSE  Makefile  README.md  availability.csv  pyproject.toml  run.py
architecture/: README.md  booking_system_workflow.md  booking_workflow.md  generate_workflow_diagram.py
migrations/versions/: 41fa3295a87e_initial_migration.py  6ed1b4db576a_add_duration_and_price_to_services.py  972f6c9fdbaa_initial_migration.py  aa31345f2d53_add_servicerequest_model.py  e01cde9296f3_add_policy_model.py
salonist/: app.py  cli.py  commands.py  config.py  models.py
salonist/agent/: graph.py  supervisor.py  tool.py
salonist/api/: __init__.py  docs.py
salonist/api/models/: booking_graph.py  search.py
salonist/api/routes/: booking.py  booking_graph.py  multi_agent.py  search.py
salonist/appointment/: agents.py  base.py  builder.py  prompts.py
salonist/appointment/models/: agents.py  generate_answer.py  tools.py
salonist/appointment/tools/: tools.py
salonist/appointment/utils/: helper.py
salonist/booking/: __init__.py  prompts.py  state.py  tool.py  workflow.py
salonist/booking/agents/: __init__.py  scheduling.py  supervisor.py
salonist/langgraph/: state.py  workflow.py
