[tool.poetry]
name = "salonist"
version = "0.1.0"
description = "A search API powered by LangGraph and Claude"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.2"
flask-restx = "^1.3.0"
langchain = "^0.1.12"
langchain-anthropic = "^0.1.4"
langgraph = "^0.0.28"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
click = "^8.1.7"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
sqlalchemy = "^2.0.39"
tavily-python = "^0.5.1"
flask-cors = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
